--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Dataaset Canvas</string>
     <string name="str_save_image_text">Your images has been saved in gallery at </string>
     <string name="save_btn_content_description">Save Button</string>
-    <string name="developer_email">vprashant29@gmail.com</string>
+    <string name="developer_email">changethisemail@yourdomain.com</string>
 </resources>
